generate-train-algo-enemy/errorFile222-02-2020-11-42-34-1582389754217-1923627612.txt
  File "/home/yuntian/Dropbox/Terminal/jzhou/C1GamesStarterKit/generate-train-algo-enemy/algo_strategy.py", line 100
    elif p<0.4:
              ^
IndentationError: unindent does not match any outer indentation level
